[package]
name = "miku-monitor"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/chordtoll/miku-monitor"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
slint = "1.6.0"

[build-dependencies]
slint-build = "1.6.0"
